add viewpager and pulltorefresh library

--- a/yssl/res/values/dimens.xml
+++ b/yssl/res/values/dimens.xml
@@ -18,4 +18,9 @@
     <dimen name="edittext_width_200">200dp</dimen>
     <dimen name="edittext_height_35">35dp</dimen>
 
+    <dimen name="indicator_right_padding">10dp</dimen>
+    <dimen name="indicator_corner_radius">12dp</dimen>
+    <dimen name="indicator_internal_padding">4dp</dimen>
+    <dimen name="header_footer_left_right_padding">24dp</dimen>
+    <dimen name="header_footer_top_bottom_padding">12dp</dimen>
 </resources>
