--- a/yssl/res/values/attrs.xml
+++ b/yssl/res/values/attrs.xml
@@ -1,59 +1,88 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <!-- SettingView -->
-    <declare-styleable name="SettingView">
-        <attr name="iOSStyle" format="boolean" />
-    </declare-styleable>
-    <declare-styleable name="SettingViewItem">
-        <attr name="title" format="string" />
-        <attr name="subTitle" format="string" />
-        <attr name="titleColor" format="reference" />
-        <attr name="subTitleColor" format="reference" />
-        <attr name="titleSize" format="reference|dimension" />
-        <attr name="subTitleSize" format="reference|dimension" />
-        <attr name="drawable" format="reference" />
-        <attr name="arrow" format="reference" />
-        <attr name="check" format="reference" />
-        <attr name="image" format="reference" />
-        <attr name="clickable" format="boolean" />
-        <attr name="checked" format="boolean" />
-        <attr name="background" format="reference" />
-    </declare-styleable>
-    <!-- SettingView -->
+    <attr name="colorValue" format="color" />  
+    <attr name="floatValue" format="float" />  
+    <attr name="integerValue" format="integer" />  
+    <attr name="booleanValue" format="boolean" />  
+    <attr name="dimensionValue" format="dimension" />  
+    <attr name="stringValue" format="string" />  
+    <attr name="referenceValue" format="color|reference" />  
+    <attr name="imageValue" format="reference"/>  
+  
+    <declare-styleable name="PullToRefresh">
 
-    <declare-styleable name="CircleImageView">
-        <attr name="border_width" format="dimension" />
-        <attr name="border_color" format="color" />
-    </declare-styleable>
+        <!-- A drawable to use as the background of the Refreshable View -->
+        <attr name="ptrRefreshableViewBackground" format="reference|color" />
 
-    <attr name="gravity">
-        <flag name="bottom" value="0x50"/>
-        <flag name="center" value="0x11"/>
-        <flag name="center_horizontal" value="0x01"/>
-        <flag name="center_vertical" value="0x10"/>
-        <flag name="clip" value="0x88"/>
-        <flag name="clip_horizontal" value="0x08"/>
-        <flag name="clip_vertical" value="0x80"/>
-        <flag name="end" value="0x00800005"/>
-        <flag name="fill" value="0x77"/>
-        <flag name="fill_horizontal" value="0x07"/>
-        <flag name="fill_vertical" value="0x70"/>
-        <flag name="left" value="0x03"/>
-        <flag name="right" value="0x05"/>
-        <flag name="start" value="0x00800003"/>
-        <flag name="top" value="0x30"/>
-    </attr>
+        <!-- A drawable to use as the background of the Header and Footer Loading Views -->
+        <attr name="ptrHeaderBackground" format="reference|color" />
 
-    <declare-styleable name="HoloCircularProgressBar">
-        <attr name="stroke_width" format="dimension" />
-        <attr name="progress" format="float"></attr>
-        <attr name="marker_progress" format="float"></attr>
-        <attr name="progress_color" format="color"></attr>
-        <attr name="progress_background_color" format="color"></attr>
-        <attr name="gravity"></attr>
-    </declare-styleable>
-    
-    <declare-styleable name="Theme">
-        <attr name="circularProgressBarStyle" format="reference"></attr>        
+        <!-- Text Color of the Header and Footer Loading Views -->
+        <attr name="ptrHeaderTextColor" format="reference|color" />
+
+        <!-- Text Color of the Header and Footer Loading Views Sub Header -->
+        <attr name="ptrHeaderSubTextColor" format="reference|color" />
+
+        <!-- Mode of Pull-to-Refresh that should be used -->
+        <attr name="ptrMode">
+            <flag name="disabled" value="0x0" />
+            <flag name="pullFromStart" value="0x1" />
+            <flag name="pullFromEnd" value="0x2" />
+            <flag name="both" value="0x3" />
+            <flag name="manualOnly" value="0x4" />
+
+            <!-- These last two are depreacted -->
+            <flag name="pullDownFromTop" value="0x1" />
+            <flag name="pullUpFromBottom" value="0x2" />
+        </attr>
+
+        <!-- Whether the Indicator overlay(s) should be used -->
+        <attr name="ptrShowIndicator" format="reference|boolean" />
+
+        <!-- Drawable to use as Loading Indicator. Changes both Header and Footer. -->
+        <attr name="ptrDrawable" format="reference" />
+
+        <!-- Drawable to use as Loading Indicator in the Header View. Overrides value set in ptrDrawable. -->
+        <attr name="ptrDrawableStart" format="reference" />
+
+        <!-- Drawable to use as Loading Indicator in the Footer View. Overrides value set in ptrDrawable. -->
+        <attr name="ptrDrawableEnd" format="reference" />
+
+        <!-- Whether Android's built-in Over Scroll should be utilised for Pull-to-Refresh. -->
+        <attr name="ptrOverScroll" format="reference|boolean" />
+
+        <!-- Base text color, typeface, size, and style for Header and Footer Loading Views -->
+        <attr name="ptrHeaderTextAppearance" format="reference" />
+
+        <!-- Base text color, typeface, size, and style for Header and Footer Loading Views Sub Header -->
+        <attr name="ptrSubHeaderTextAppearance" format="reference" />
+
+        <!-- Style of Animation should be used displayed when pulling. -->
+        <attr name="ptrAnimationStyle">
+            <flag name="rotate" value="0x0" />
+            <flag name="flip" value="0x1" />
+        </attr>
+
+        <!-- Whether the user can scroll while the View is Refreshing -->
+        <attr name="ptrScrollingWhileRefreshingEnabled" format="reference|boolean" />
+
+        <!--
+        	Whether PullToRefreshListView has it's extras enabled. This allows the user to be 
+        	able to scroll while refreshing, and behaves better. It acheives this by adding
+        	Header and/or Footer Views to the ListView.
+        -->
+        <attr name="ptrListViewExtrasEnabled" format="reference|boolean" />
+
+        <!--
+        	Whether the Drawable should be continually rotated as you pull. This only
+        	takes effect when using the 'Rotate' Animation Style.
+        -->
+        <attr name="ptrRotateDrawableWhilePulling" format="reference|boolean" />
+
+        <!-- BELOW HERE ARE DEPRECEATED. DO NOT USE. -->
+        <attr name="ptrAdapterViewBackground" format="reference|color" />
+        <attr name="ptrDrawableTop" format="reference" />
+        <attr name="ptrDrawableBottom" format="reference" />
     </declare-styleable>
 </resources>
