--- a/yssl/res/values/colors.xml
+++ b/yssl/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resources>
 
+    <color name="title">#ffffff</color>
+    <color name="night_title">#000000</color>
+    
     <color name="title_bg_color">#6CBB52</color>
     <color name="title_font_color">#ffffff</color>
     <color name="bg_color">#ffffff</color>
