--- a/yssl/res/values/styles.xml
+++ b/yssl/res/values/styles.xml
@@ -25,7 +25,7 @@
         <item name="dimensionValue">16dp</item>
         <!-- 如果string类型不是填的引用而是直接放一个字符串,在布局文件中使用正常,但代码里获取的就有问题 -->
         <item name="stringValue">@string/action_settings</item>
-        <item name="referenceValue">@drawable/bg</item>
+        <item name="referenceValue">@drawable/ic_launcher</item>
         <item name="imageValue">@drawable/ic_launcher</item>
     </style>
 
@@ -36,8 +36,8 @@
         <item name="booleanValue">false</item>
         <item name="dimensionValue">18sp</item>
         <item name="stringValue">@string/action_settings</item>
-        <item name="referenceValue">@drawable/night_bg</item>
-        <item name="imageValue">@drawable/night_launcher_icon</item>
+        <item name="referenceValue">@drawable/ic_launcher</item>
+        <item name="imageValue">@drawable/ic_launcher</item>
     </style>
 
     <style name="MyDialog" parent="@android:Theme.Dialog">
