--- a/yssl/res/values/colors.xml
+++ b/yssl/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="title">#ffffff</color>
     <color name="night_title">#000000</color>
     
-    <color name="title_bg_color">#6CBB52</color>
+    <color name="title_bg_color">#36A803</color>
     <color name="title_font_color">#ffffff</color>
     <color name="bg_color">#ffffff</color>
     <color name="black_font">#333333</color>
