--- a/yssl/res/layout/activity_main.xml
+++ b/yssl/res/layout/activity_main.xml
@@ -4,24 +4,35 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical" >
+    
+    <com.strod.yssl.view.TitleBar 
+        android:id="@+id/title_bar"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/title_height"
+        android:background="@color/title_bg_color"
+        />
 
     <FrameLayout
         android:id="@+id/main_center_fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/title_bar"
+        android:layout_above="@+id/radio_group" />
 
     <RadioGroup
+        android:id="@+id/radio_group"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="@dimen/tab_height"
         android:layout_alignParentBottom="true"
-        android:background="#FFFFFF"
+        android:background="@color/gray"
         android:gravity="center"
         android:orientation="horizontal" >
 
         <RadioButton
+            android:id="@+id/radio_index"
             style="@style/ContentFont"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:drawableTop="@drawable/all_news"
@@ -29,9 +40,10 @@
             android:text="index" />
 
         <RadioButton
+            android:id="@+id/radio_publish"
             style="@style/ContentFont"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:drawableTop="@drawable/message_icon"
@@ -39,9 +51,10 @@
             android:text="message" />
 
         <RadioButton
+            android:id="@+id/radio_collect"
             style="@style/ContentFont"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:drawableTop="@drawable/set_icon"
@@ -49,9 +62,10 @@
             android:text="setting" />
 
         <RadioButton
+            android:id="@+id/radio_personal"
             style="@style/ContentFont"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:button="@null"
             android:drawableTop="@drawable/account_icon"
