--- a/yssl/res/layout/title_bar.xml
+++ b/yssl/res/layout/title_bar.xml
@@ -4,7 +4,7 @@
     android:id="@+id/title_bar"
     android:layout_width="match_parent"
     android:layout_height="@dimen/title_height"
-    android:background="@color/title_backcolor"
+    android:background="@color/title_bg_color"
     android:gravity="center_vertical"
     android:paddingLeft="7dp"
     android:paddingRight="7dp" >
@@ -23,7 +23,7 @@
         android:visibility="invisible" />
 
     <TextView 
-        android:id="@+id/title_text"
+        android:id="@+id/title_middle_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
