--- a/yssl/res/values/dimens.xml
+++ b/yssl/res/values/dimens.xml
@@ -3,7 +3,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="title_height">60dp</dimen>
+    <dimen name="title_height">44dp</dimen>
+    <dimen name="tab_height">49dp</dimen>
     <dimen name="margin_ordinary">16dp</dimen>
     <dimen name="margin_little">8dp</dimen>
     <dimen name="font_size_eighteen">18sp</dimen>
