--- a/yssl/res/layout/title_bar.xml
+++ b/yssl/res/layout/title_bar.xml
@@ -23,6 +23,7 @@
         android:visibility="invisible" />
 
     <TextView 
+        style="@style/TitleFont"
         android:id="@+id/title_middle_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
