--- a/yssl/res/layout/fragment_personal.xml
+++ b/yssl/res/layout/fragment_personal.xml
@@ -95,7 +95,38 @@
                 android:text="@string/night_mode" />
 
             <com.strod.yssl.view.SwitchButton
-                android:id="@+id/switch_button"
+                android:id="@+id/night_mode_switch_button"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true" />
+        </RelativeLayout>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1px"
+            android:background="@color/divider_color" />
+        
+        <RelativeLayout
+            android:id="@+id/translucent_status_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_margin="@dimen/margin_little"
+                android:background="@drawable/default_round_image" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="@string/translucent_status" />
+
+            <com.strod.yssl.view.SwitchButton
+                android:id="@+id/translucent_status_switch_button"
                 android:layout_width="120dp"
                 android:layout_height="50dp"
                 android:layout_alignParentRight="true"
