--- a/yssl/res/values/colors.xml
+++ b/yssl/res/values/colors.xml
@@ -5,10 +5,12 @@
     <color name="title_font_color">#f8f8f8</color>
     
     <color name="bg_color">#ffffff</color>
-    <color name="night_bg_color">#CC333333</color>
+    <!--<color name="night_bg_color">#CC333333</color>-->
+    <color name="night_bg_color">#3e3e3e</color>
     
     <color name="bottom_color">#cccccc</color>
-    <color name="night_bottom_color">#EE333333</color>
+    <!--<color name="night_bottom_color">#EE333333</color>-->
+    <color name="night_bottom_color">#333333</color>
     
     <color name="divider_color">#19000000</color>
     
