detail UI update

--- a/yssl/res/layout/activity_details.xml
+++ b/yssl/res/layout/activity_details.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    style="@style/TranslucentStatus_Bar"
     android:orientation="vertical" >
 
     <com.strod.yssl.view.TitleBar
@@ -22,6 +23,7 @@
         android:id="@+id/pull_refresh_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:background="?attr/bgColor"
         android:cacheColorHint="#00000000"
         android:divider="#19000000"
         android:dividerHeight="4dp"
