--- a/yssl/res/drawable/vpi__tab_indicator.xml
+++ b/yssl/res/drawable/vpi__tab_indicator.xml
@@ -16,19 +16,32 @@
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Non focused states -->
+    <!--  
     <item android:state_focused="false" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/vpi__tab_unselected_holo" />
     <item android:state_focused="false" android:state_selected="true"  android:state_pressed="false" android:drawable="@drawable/vpi__tab_selected_holo" />
+	-->
 
     <!-- Focused states -->
+    <!--
     <item android:state_focused="true" android:state_selected="false" android:state_pressed="false" android:drawable="@drawable/vpi__tab_unselected_focused_holo" />
     <item android:state_focused="true" android:state_selected="true"  android:state_pressed="false" android:drawable="@drawable/vpi__tab_selected_focused_holo" />
+	-->
 
     <!-- Pressed -->
     <!--    Non focused states -->
+    <!--
     <item android:state_focused="false" android:state_selected="false" android:state_pressed="true" android:drawable="@drawable/vpi__tab_unselected_pressed_holo" />
     <item android:state_focused="false" android:state_selected="true"  android:state_pressed="true" android:drawable="@drawable/vpi__tab_selected_pressed_holo" />
+	-->
 
     <!--    Focused states -->
+    <!--
     <item android:state_focused="true" android:state_selected="false" android:state_pressed="true" android:drawable="@drawable/vpi__tab_unselected_pressed_holo" />
     <item android:state_focused="true" android:state_selected="true"  android:state_pressed="true" android:drawable="@drawable/vpi__tab_selected_pressed_holo" />
+    -->
+     <!-- Non focused states -->
+    <item android:drawable="@drawable/vpi__tab_selected_holo" android:state_focused="true"/>
+
+    <!-- Focused states -->
+    <item android:drawable="@drawable/vpi__tab_selected_holo" android:state_selected="true"/>
 </selector>
