--- a/yssl/res/layout/fragment_guide_three.xml
+++ b/yssl/res/layout/fragment_guide_three.xml
@@ -2,14 +2,16 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="@color/black">
+    android:background="@color/title_bg_color">
     
     <Button 
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="8dp"
         android:layout_gravity="bottom|center_horizontal"
         android:layout_marginBottom="100dp"
         android:text="@string/start"
+        android:background="@color/darkgray"
         />
 </FrameLayout>
