--- a/yssl/res/layout/fragment_index.xml
+++ b/yssl/res/layout/fragment_index.xml
@@ -5,16 +5,32 @@
     android:gravity="center"
     android:orientation="vertical" >
 
-    <com.viewpagerindicator.TabPageIndicator
-        android:id="@+id/indicator"
+    <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:weightSum="7"
+         >
+
+        <com.viewpagerindicator.TabPageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="6" />
+        <ImageView 
+            android:id="@+id/drag_order"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/down_arrow"
+            />
+    </LinearLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-         />
+        android:layout_weight="1" />
 
 </LinearLayout>
