--- a/yssl/res/values/dimens.xml
+++ b/yssl/res/values/dimens.xml
@@ -24,4 +24,6 @@
     <dimen name="indicator_internal_padding">4dp</dimen>
     <dimen name="header_footer_left_right_padding">24dp</dimen>
     <dimen name="header_footer_top_bottom_padding">12dp</dimen>
+    
+    <dimen name="dgv_overlap_if_switch_straight_line">16dp</dimen>
 </resources>
