--- a/yssl/res/values/ids.xml
+++ b/yssl/res/values/ids.xml
@@ -5,4 +5,5 @@
     <item type="id" name="webview" />
     <item type="id" name="scrollview" />
 
+    <item type="id" name="dgv_wobble_tag"/>
 </resources>
