--- a/yssl/res/layout/fragment_content_list.xml
+++ b/yssl/res/layout/fragment_content_list.xml
@@ -13,4 +13,5 @@
     android:headerDividersEnabled="true"
     android:smoothScrollbar="true"
     app:ptrMode = "both"
+    app:ptrAnimationStyle = "flip"
      />
