--- a/yssl/res/values/colors.xml
+++ b/yssl/res/values/colors.xml
@@ -107,4 +107,6 @@
     <color name="subscribe_activity_bg">#ffefefef</color>
     <color name="subscribe_bg">#fff5f5f5</color>
     <color name="subscribe_seperate_line">#ffcdcdcd</color>
+    
+    <color name="rippelColor">#FFFFFF</color>
 </resources>
