--- a/yssl/res/layout/fragment_collect.xml
+++ b/yssl/res/layout/fragment_collect.xml
@@ -5,10 +5,19 @@
     android:gravity="center"
     android:orientation="vertical" >
 
-    <TextView 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="collect"
-        />
+    <com.strod.yssl.view.swipelistview.SwipeListView
+            xmlns:swipe="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/swipe_list_view"
+            android:listSelector="#00000000"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            swipe:swipeFrontView="@+id/front"
+            swipe:swipeBackView="@+id/back"
+            swipe:swipeCloseAllItemsWhenMoveList="true"
+            swipe:swipeActionLeft="reveal"
+            swipe:swipeMode="left"
+            swipe:swipeOpenOnLongPress="false"
+            swipe:swipeOffsetLeft="200dp"
+            />
 
 </LinearLayout>
