--- a/yssl/res/layout/activity_details.xml
+++ b/yssl/res/layout/activity_details.xml
@@ -10,28 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/title_height" />
     
-    <!--  
     <WebView 
         android:id="@+id/webview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/white"
-        />-->
-
-    <com.handmark.pulltorefresh.library.PullToRefreshListView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/pull_refresh_list"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_height="match_parent"
         android:background="?attr/bgColor"
-        android:cacheColorHint="#00000000"
-        android:divider="#19000000"
-        android:dividerHeight="4dp"
-        android:fadingEdge="none"
-        android:fastScrollEnabled="false"
-        android:footerDividersEnabled="false"
-        android:headerDividersEnabled="false"
-        android:smoothScrollbar="true"
-        app:ptrMode="pullUpFromBottom" />
+        />
 
 </LinearLayout>
