--- a/yssl/res/layout/activity_guide.xml
+++ b/yssl/res/layout/activity_guide.xml
@@ -10,7 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent" />
 
-    <com.viewpagerindicator.CirclePageIndicator
+    <com.strod.yssl.view.viewpagerindicator.CirclePageIndicator
         android:id="@+id/indicator"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
