--- a/yssl/res/layout/fragment_content_list.xml
+++ b/yssl/res/layout/fragment_content_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.handmark.pulltorefresh.library.PullToRefreshListView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.strod.yssl.view.pulltorefresh.PullToRefreshListView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/pull_refresh_list"
     android:layout_width="fill_parent"
