update swipelistview and add request params

--- a/yssl/res/layout/item_collect_list.xml
+++ b/yssl/res/layout/item_collect_list.xml
@@ -1,37 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
-
-    <LinearLayout
-        android:id="@+id/back"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:gravity="right|center_vertical"
-        android:tag="back" >
-
-        <TextView
-            android:id="@+id/item_top"
-            android:layout_width="80dp"
-            android:layout_height="fill_parent"
-            android:background="#FFD700"
-            android:gravity="center"
-            android:text="@string/item_top" />
-
-        <TextView
-            android:id="@+id/item_delete"
-            android:layout_width="80dp"
-            android:layout_height="fill_parent"
-            android:background="#FF6347"
-            android:gravity="center"
-            android:text="@string/item_delete" />
-    </LinearLayout>
+<com.strod.yssl.view.swipelistview.ScrollLinerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal" >
 
     <RelativeLayout
         android:id="@+id/front"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/bgColor"
         android:padding="8dp"
         android:tag="front" >
 
@@ -59,4 +35,26 @@
             android:layout_toRightOf="@+id/content_img"
             android:maxLines="2" />
     </RelativeLayout>
-</FrameLayout>
+    <LinearLayout
+        android:id="@+id/back"
+        android:layout_width="@dimen/delete_action_len"
+        android:layout_height="fill_parent"
+        android:tag="back" >
+
+        <TextView
+            android:id="@+id/item_top"
+            android:layout_width="60dp"
+            android:layout_height="fill_parent"
+            android:background="#FFD700"
+            android:gravity="center"
+            android:text="@string/item_top" />
+
+        <TextView
+            android:id="@+id/item_delete"
+            android:layout_width="60dp"
+            android:layout_height="fill_parent"
+            android:background="#FF6347"
+            android:gravity="center"
+            android:text="@string/item_delete" />
+    </LinearLayout>
+</com.strod.yssl.view.swipelistview.ScrollLinerLayout>
