--- a/yssl/res/layout/fragment_collect.xml
+++ b/yssl/res/layout/fragment_collect.xml
@@ -10,7 +10,7 @@
             android:listSelector="#00000000"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-           
+            android:divider="@color/divider_color"
             />
 
     
