--- a/yssl/res/layout/fragment_personal.xml
+++ b/yssl/res/layout/fragment_personal.xml
@@ -91,8 +91,8 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="@string/night_mode" />
-
-            <com.strod.yssl.view.SlipSwitch
+                
+            <com.strod.yssl.view.SwitchButton
                 android:id="@+id/night_mode_switch_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
