--- a/yssl/res/layout/pull_to_refresh_header_vertical.xml
+++ b/yssl/res/layout/pull_to_refresh_header_vertical.xml
@@ -28,6 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:indeterminate="true"
+                android:indeterminateDrawable="@drawable/progress_rotate_indeterminate"
                 android:visibility="gone" />
         </FrameLayout>
 
