--- a/yssl/res/layout/fragment_personal.xml
+++ b/yssl/res/layout/fragment_personal.xml
@@ -1,8 +1,11 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scroll_view"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" >
+    android:layout_height="match_parent"
+    android:cacheColorHint="#00000000"
+    android:dividerHeight="1px"
+    android:fadingEdge="none"
+    android:fastScrollEnabled="false" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,7 +94,7 @@
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="@string/night_mode" />
-                
+
             <com.strod.yssl.view.SwitchButton
                 android:id="@+id/night_mode_switch_button"
                 android:layout_width="wrap_content"
