--- a/yssl/res/layout/fragment_index.xml
+++ b/yssl/res/layout/fragment_index.xml
@@ -1,10 +1,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical" >
 
+    <!--
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -26,6 +28,21 @@
             android:src="@drawable/down_arrow"
             />
     </LinearLayout>
+    -->
+    <com.strod.yssl.view.viewpagerindicator.PagerSlidingTabStrip
+        android:id="@+id/indicator"
+        android:layout_width="match_parent"
+        android:layout_height="36dip"
+        app:pstsShouldExpand="true"
+        app:pstsIndicatorColor = "@color/title_bg_color"
+        app:pstsIndicatorHeight="1dp"
+        app:pstsDividerColor="#00000000"
+        app:pstsUnderlineColor = "#00000000"
+        app:pstsUnderlineHeight="0dp"
+        app:pstsTabPaddingLeftRight="22dip"
+        app:pstsSelectedTabTextSize="12sp"
+        app:pstsSelectedTabTextColor="@color/title_bg_color"
+        />
 
     <android.support.v4.view.ViewPager
         android:id="@+id/pager"
