change tab textsize

--- a/yssl/res/layout/fragment_index.xml
+++ b/yssl/res/layout/fragment_index.xml
@@ -40,7 +40,8 @@
         app:pstsUnderlineColor = "#00000000"
         app:pstsUnderlineHeight="0dp"
         app:pstsTabPaddingLeftRight="22dip"
-        app:pstsSelectedTabTextSize="12sp"
+        app:pstsTabTextSize="12sp"
+        app:pstsSelectedTabTextSize="14sp"
         app:pstsSelectedTabTextColor="@color/title_bg_color"
         />
 
