--- a/yssl/res/layout/activity_setting.xml
+++ b/yssl/res/layout/activity_setting.xml
@@ -23,6 +23,7 @@
         android:fastScrollEnabled="false"
         android:footerDividersEnabled="true"
         android:headerDividersEnabled="true"
+        android:overScrollMode="never"
         android:scrollbars="none" />
 
 </LinearLayout>
