--- a/yssl/res/layout/fragment_collect.xml
+++ b/yssl/res/layout/fragment_collect.xml
@@ -11,7 +11,7 @@
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:divider="@color/divider_color"
-            
+            android:overScrollMode="never"
             />
 
     
